src/App.css
/* ... */
@media (hover: hover) and (pointer: fine) {
  body {
    cursor: var(--cursorDefault);
  }

  p,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  input[type=text],
  input[type=tel],
  input[type=email],
  input[type=search],
  textarea {
    cursor: var(--cursorText);
  }

  a,
  a *,
  button,
  button *,
  .Sidebar,
  .Sidebar *,
  .SidebarList,
  .SidebarList *,
  input[type="submit"]
  {
    cursor: var(--cursorPointer);
  }
}

/* App Styles */
.App {
  height: auto;
  width: 100vh;
}

/* Body Styles */
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  background-color: rgb(25, 26, 30);
}

/* Sidebar Styles */
.Sidebar {
  height: 100%;
  width: 200px;
  background-color: rgb(44, 46, 51);
}

.SidebarList {
  height: 100%;
  padding: 0;
  width: 100%;
}

.SidebarList .row {
  max-width: 100%;
  height: 50px;
  list-style-type: none;
  margin: 0;
  display: flex;
  color: white;
  justify-content: center;
  align-items: center;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  transition: background-color 0.3s ease, font-size 0.3s ease;
  font-size: 20px;
}

.SidebarList .row:hover {
  background-color: rgb(59, 61, 67);
  font-size: 200%;
}

.SidebarList #active {
  background-color: rgb(59, 61, 67);
}

/* Header Styles */
.header {
  font-family: Impact, Haettenschweiler, sans-serif;
  font-size: 45px;
  background-color: rgb(132, 140, 109);
  width: 100vw;
  min-height: 55px;
}

.header img {
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 5px;
  max-width: 55px;
}

#contact-firstname,
#contact-email,
#contact-message {
  color: black;
  margin: 3px;
  border-radius: 10px;
  width: 50%;
}

#contact-message {
  text-align: initial;
  width: 700px;
  min-height: 200px;
  resize: none;
  line-height: normal;
}

input[type="submit"] {
  color: white;
  margin-top: 10px;
  margin-left: 200px;
  background-color: rgb(70, 74, 57);
  border: 3px solid black;
  border-radius: 10px;
  transition: all 0.3s ease;
}

input {
  border-radius: 3px;
  font-size: 23px;
}

input[type="submit"]:hover {
  background-color: rgb(82, 85, 69);
  font-size: 26px;
}

/* Introduction and About Section Styles */
#introduction-text,
#about-text,
#contactForm,
#robots-div,
.textarea {
  text-align: left;
  color: white;
  font-size: 20px;
  position: absolute;
  top: 12%;
  margin-left: 15%;
  max-width: 1000px;
  font-weight: bolder;
  background-color: rgb(106, 111, 90);
  border: 3px solid black;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  transition: width 0.3s ease;
  padding-left: 10px;
  padding-bottom: 10px;
}

/* Seasons Section Styles */
#seasons-sum img {
  max-width: 320px;
  width: 300px;
  padding-right: 100px;
  float: right;
  transition: all 0.3s ease;
}

#seasons-sum {
  min-width: auto;
}

#seasons-sum img:hover {}

/* Game Sections Styles */
#skystone,
#ultimate-goal,
#freight-frenzy,
#powerplay {
  transition: all 0.3s ease, filter 0.3s ease;
}

#skystone img,
#ultimate-goal img,
#freight-frenzy img,
#powerplay img {
  transition: all 0.3s ease;
}

#skystone {
  color: rgb(174, 204, 214);
  transition: all 0.3s ease;
}

#ultimate-goal {
  color: rgb(178, 207, 29);
  transition: all 0.3s ease;
}

#freight-frenzy {
  color: rgb(207, 227, 132);
  transition: all 0.3s ease;
}

#powerplay {
  color: rgb(103, 151, 171);
}

#skystone:hover,
#ultimate-goal:hover,
#freight-frenzy:hover,
#powerplay:hover {
  font-size: 105%;
  filter: brightness(110%);
}

/* Center Text Styles */
.center-text {
  text-align: center;
}

/* About Section Header Styles */
#about-header,
#about-accomplishments,
#about-workflow {
  font-size: 30px;
  color: rgb(212, 208, 208);
  transition: font-size 0.3s ease;
}

#about-header:hover,
#about-accomplishments:hover,
#about-workflow:hover {
  font-size: 40px;
}

/* Button Styles */
.button {
  border: 2px solid black;
  background-color: rgb(97, 102, 76);
  color: rgb(210, 208, 204);
  transition: color 0.3s ease, background-color 0.3s ease;
  text-decoration: none;
}

.button:hover {
  background-color: rgb(69, 72, 59);
  color: rgb(179, 178, 174);
}

/* Anchor Styles */
a {
  text-decoration: none;
  filter: brightness(100%);
  transition: filter 0.3s ease;
}

a:hover {
  filter: brightness(85%);
}

/* Header Links Styles */
#header-links {
  padding-left: 900px;
  padding-right: -30px;
}

.header-link {
  size: 20px;
  margin-left: 5px;
  color: rgb(51, 51, 51);
}

.robot-img {
  width: 30%;
  float: right;
  margin-right: 13px;
  margin-left: 13px;
  transition: all 0.3s ease;
}

.robot-img:hover {
  filter: brightness(110%);
  width: 30.5%;
}

.robot-sum-text {
  margin-left: 10px;
  transition: all 0.3s ease;
}

.robot-sum-text:hover {}

/* Scrollbar styles */

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #bdb4b4;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(67, 70, 56);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(93, 100, 75);
}

#sponsors-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
  align-items: center;
  justify-content: center;
}

.sponsor {
  text-align: center;
}

.sponsor a img {
  max-width: 130%;
  height: auto;
  display: inline-block;
}

#sponsors-container img {
  width: 70%;
  transition: all ease 0.3s;
  margin: 5px;
}

#sponsors-container {
  margin: 5px;
}

#sponsors-container img:hover {
  width: 72%;
}
/* ... */

